--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background-color: rgb(138, 0, 252);
 }
 
 code {
@@ -25,6 +26,8 @@ select {
 	min-width: 50px;
 	margin: 5px;
 	font-size: 18px;
+	border-radius: 5px;
+	background-color: rgb(147, 226, 0);
 }
 
 label {
@@ -34,17 +37,17 @@ label {
 
 input,
 textarea {
-	width: 200px;
 	padding: 10px;
 	display: inline-block;
 	margin: 10px;
+	border-radius: 10px;
 }
 
 .Navbar {
-	background: hsl(342, 97%, 37%);
+	background: hsl(338, 100%, 48%);
 	color: white;
 	padding: 0px 20px;
-	box-shadow: 0px 1px 2px gray;
+	box-shadow: 0px 1px 2px rgb(4, 238, 238);
 	width: 100%;
 	margin-bottom: 15px;
 	padding: 5px;
@@ -57,26 +60,32 @@ textarea {
 	font-weight: 600;
 }
 
-.SignupPage, .LoginPage {
+.SignupPage,
+.LoginPage {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	width: 400px;
 	padding: 10px;
-	box-shadow: 0px 2px 3px grey;
+	box-shadow: 0px 2px 3px rgb(4, 238, 238);
 	margin: 0 auto;
 	margin-bottom: 20px;
-	background: hsl(342, 97%, 29%);
+	background: hsl(152, 100%, 24%);
 	border-radius: 4px;
+}
+
+.card img {
+	width: 50vw;
+	height: auto;
 }
 
 .card {
 	width: 400px;
 	padding: 10px;
-	box-shadow: 0px 2px 3px grey;
+	box-shadow: 0px 2px 3px rgb(4, 238, 238);
 	margin: 0 auto;
 	margin-bottom: 20px;
-	background: hsl(342, 97%, 29%);
+	background: hsl(152, 100%, 24%);
 	border-radius: 4px;
 }
 
@@ -89,8 +98,8 @@ textarea {
 .AddProject,
 .AddTask {
 	background: #f9eec3;
-	border: 1px solid grey;
-	box-shadow: 0px 2px 3px grey;
+	border: 1px solid rgb(4, 238, 238);
+	box-shadow: 0px 2px 3px rgb(4, 238, 238);
 	width: 400px;
 	text-align: center;
 	margin: 0 auto;
@@ -100,7 +109,7 @@ textarea {
 }
 
 .EditProjectPage {
-	background-color: rgb(239, 196, 88);
+	background-color: hsl(152, 100%, 24%);
 }
 
 .EditProjectPage form,
