--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,122 +9,60 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: rgb(138, 0, 252);
+	background-color: hsl(273, 100%, 49%);
 }
 
-/* index.css */
+/* Colors */
+:root {
+	--hue: 180;
 
-a {
-	list-style: none;
-	color: rgb(0, 0, 0);
+	--base-color: hsl(var(--hue) 100% 25%);
+	--body-color: hsl(var(--hue) 80% 60%);
+	--header-color: hsl(var(--hue) 60% 90%);
+	--title-color: hsl(var(--hue) 90% 40%);
+	--text-color: hsl(0, 0%, 40%);
+	--button-color: hsl(81, 100%, 44%);
+	--navbar-color: hsl(338, 100%, 48%);
+	--background-color: hsl(0, 0%, 95%);
+	--error-color: hsl(342, 94%, 45%);
 }
 
-button,
-select {
-	padding: 5px 10px;
-	min-width: 50px;
-	margin: 5px;
-	font-size: 18px;
-	border-radius: 5px;
-	background-color: rgb(147, 226, 0);
-}
-
-label {
-	width: 200px;
-	display: block;
-}
-
-input,
-textarea {
-	padding: 10px;
-	display: inline-block;
-	margin: 10px;
-	border-radius: 10px;
-}
-
-.Navbar {
-	background: hsl(338, 100%, 48%);
-	color: white;
-	padding: 0px 20px;
-	box-shadow: 0px 1px 2px rgb(4, 238, 238);
-	width: 100%;
-	margin-bottom: 15px;
-	padding: 5px;
-}
-
-.Navbar li {
-	list-style: none;
-	color: white;
-	font-size: 24px;
-	font-weight: 600;
-}
-
-.SignupPage,
-.LoginPage {
+/* All Pages */
+.container {
 	display: flex;
-	flex-direction: column;
+	justify-content: center;
 	align-items: center;
-	width: 400px;
-	padding: 10px;
-	box-shadow: 0px 2px 3px rgb(4, 238, 238);
-	margin: 0 auto;
-	margin-bottom: 20px;
-	background: hsl(152, 100%, 24%);
-	border-radius: 4px;
+	flex-direction: column;
 }
 
-img {
+button {
+	margin-bottom: 5px;
+	margin-top: 5px;
+}
+
+/* NavBar */
+
+/* Home Page */
+.home-image {
 	width: 50vw;
-	max-width: 200px;
-	max-height: 200px;
+	height: 50vh;
 }
 
-.card {
-	width: 400px;
-	padding: 10px;
-	box-shadow: 0px 2px 3px rgb(4, 238, 238);
-	margin: 0 auto;
-	margin-bottom: 20px;
-	background: hsl(152, 100%, 24%);
-	border-radius: 4px;
+/* Cards */
+
+.create-card {
+	margin: 5px;
+	width: 30vw;
+	height: 60vh;
 }
 
-.ProjectCard h3::after {
-	content: url("https://education-team-2020.s3.eu-west-1.amazonaws.com/web-dev/m3/icon-expand.png");
-	margin-left: 5px;
+.card-image {
+	width: 50vw;
+	height: 40vh;
+	margin-bottom: 10px;
 }
 
-.EditProjectPage,
-.AddProject,
-.AddTask {
-	background: #f9eec3;
-	border: 1px solid rgb(4, 238, 238);
-	box-shadow: 0px 2px 3px rgb(4, 238, 238);
-	width: 400px;
-	text-align: center;
-	margin: 0 auto;
-	margin-bottom: 20px;
-	padding: 10px;
-	border-radius: 4px;
-}
-
-.EditProjectPage {
-	background-color: hsl(152, 100%, 24%);
-}
-
-.EditProjectPage form,
-.AddTask form,
-.AddProject form {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.AddTask button,
-.AddProject button {
-	display: block;
-}
-
-.TaskCard {
-	background-color: #dfeef9;
+/* Profile Page */
+.profile-image {
+	max-width: 50px;
 }
