--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,11 @@ body {
 	border-radius: 20px;
 }
 
+.card-profile {
+	max-width: 30px;
+	border-radius: 40px;
+}
+
 hr {
 	margin-top: 10px;
 	box-shadow: 0px 6px 6px var(--navbar-color);
@@ -181,6 +186,7 @@ textarea {
 .card {
 	box-shadow: 0px 2px 3px var(--navbar-color);
 	margin-bottom: 20px;
+	padding: 0px 0px 10px;
 }
 
 .ProjectCard h3::after {
